--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,27 @@
 spring.jpa.hibernate.ddl-auto=none
+spring.jpa.generate-ddl=false
 spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect=Postgres
 
 logging.level.org.springframework.orm.jpa=INFO
 logging.level.org.springframework.transaction=INFO
 logging.level.org.springframework.transaction.interceptor=TRACE
 logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
 
-# TODO Append connection to DB
-#spring.datasource.driverClassName
-#spring.datasource.url
-#spring.datasource.username
-#spring.datasource.password
+hibernate.show_sql=true
+hibernate.jdbc.time_zone=UTC
+
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/shareit
+spring.datasource.username=shareit
+spring.datasource.password=shareit
+
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.url=jdbc:h2:mem:./db/shareit
+#spring.datasource.url=jdbc:h2:file:./db/shareit
+#spring.datasource.username=shareit
+#spring.datasource.password=shareit
+
+spring.output.ansi.enabled=ALWAYS
