--- a/pom.xml
+++ b/pom.xml
@@ -61,8 +61,8 @@
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
-			<!--<scope>test</scope> -->
-			<scope>runtime</scope>
+			<scope>test</scope>
+			<!--<scope>runtime</scope>-->
 		</dependency>
 
 		<dependency>
