--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.generate-ddl=false
 spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect=Postgres
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect=Postgres
 
 logging.level.org.springframework.orm.jpa=INFO
 logging.level.org.springframework.transaction=INFO
@@ -13,15 +13,15 @@ logging.level.org.hibernate.SQL=DEBUG
 hibernate.show_sql=true
 hibernate.jdbc.time_zone=UTC
 
-spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:6541/shareit
-spring.datasource.username=shareit
-spring.datasource.password=shareit
-
-#spring.datasource.driverClassName=org.h2.Driver
-#spring.datasource.url=jdbc:h2:mem:./db/shareit
-#spring.datasource.url=jdbc:h2:file:./db/shareit
+#spring.datasource.driverClassName=org.postgresql.Driver
+#spring.datasource.url=jdbc:postgresql://localhost:6541/shareit
 #spring.datasource.username=shareit
 #spring.datasource.password=shareit
+
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:./db/shareit
+#spring.datasource.url=jdbc:h2:file:./db/shareit
+spring.datasource.username=shareit
+spring.datasource.password=shareit
 
 spring.output.ansi.enabled=ALWAYS
